--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
   </head>
-  <body class="font-sans antialiased text-gray-900 box-border">
+  <body class="font-sans antialiased text-gray-900">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="flex justify-center pt-16" id="root"></div>
     <!--
